# ECG

./: README.md
ECG/docs/: input_payload.md  usage.md
ECG/ecg-freertos/: CMakeLists.txt  common_freertos.h  executor.h  freertos-executor.elf  hello_world_main.c  syscalls.h
ECG/ecg-kernel-control-graph/: built-in.bc.callgraph-fs.dot  built-in.bc.callgraph-sched.dot  built-in.bc.callgraph-time.dot  convert_prompt.py  extract_code.py
ECG/ecg-script/: call-openai-api.py  generate_code.py
ECG/executor/: defs.h
ECG/experiments/: result.md
ECG/freertos-executor/: syscalls.h
ECG/kernel_cgc/: KernelBitCode.go  convert_prompt.py  convert_prompt_fs_processed.txt  convert_prompt_mm_processed.txt  convert_prompt_net_processed.txt  convert_prompt_sched_processed.txt  convert_prompt_time_processed.txt
ECG/linux/: KernelBitCode.go  built-in.bc.callgraph.dot  convert_prompt.py  convert_prompt_fs_processed.txt
ECG/prompts/: convert_prompt_fs.txt  convert_prompt_mm.txt
Tardis/: .gdb_history  Dockerfile
Tardis/feryr_external/: arm-qemu-gcc.json
Tardis/feryr_fuzzer/: Cargo.toml
Tardis/feryr_util/: drcov.c
Tardis/sys/: freertos-aarch64.json  types.md
benchmarks/Tardis/: .gitignore  .gitmodules  Cargo.toml  README.md  gen.patch  raps-freertos.json
benchmarks/Tardis/feryr_debug/: Cargo.toml
benchmarks/Tardis/feryr_debug/src/: main.rs
benchmarks/moonshine/: distillStats
code/: app.py  call-openai-api.py  generate_html.py
crash/BUG12_Bad_rss_counter_state/: machineInfo1  report1  repro.prog  repro.stats
crash/BUG: unable to handle kernel paging request in ext4_ext_remove_space/: description  repro.cprog  repro.stats
crash/BUG:_unable_to_handle_kernel_paging_request_in_swiotlb_bounce/: description  machineInfo0  report0  repro.cprog  repro.prog
crash/INFO:_rcu_detected_stall_in_corrupted/: log0  log1  report0  repro.cprog  repro.report  repro.stats
crash/INFO:_rcu_detected_stall_in_gc_worker/: repro.cprog
crash/INFO:_rcu_detected_stall_in_perf_event_open/: log0  log2  log3  machineInfo9  report0  report10  report11  report4  report6  report7  report9  repro.report  repro.stats
crash/INFO_ rcu detected stall in scsi_error_handler/: log0  log1
crash/KASAN: global-out-of-bounds Read in arch_adjust_kprobe_addr/: description  log4  log7  machineInfo0  report7  report8  repro1
crash/KCSAN: data-race in e1000_clean_rx_irq/: description  (+2 more)
docs/: input_payload.md  usage.md
experiments/: bug.md  result.md
files/: bug.md
freertos_executor/: .gitignore  CMakeLists.txt  compile.sh  sdkconfig  syscalls.h
linux/: GenerateKernelBc.go  cgpathsearch.py  convertToPrompt.py  convert_prompt_ipc.txt  convert_prompt_net.txt  dot_transfer_pdf.py  execuClang.py  extractSyscall.py  saved_path_net.txt  test.py  testPrompt.txt  traceCallPaths.py
moonshine/: corpus.db
prompts/: convert_prompt_ipc.txt  convert_prompt_kernel_sched.txt  convert_prompt_kernel_time.txt  convert_prompt_net.txt  saveFirstPrompt.py
tardis/: rustfmt.toml
tardis/feryr_prog/: Cargo.toml
tardis/feryr_prog/src/corpus_handle/: len.rs  prog.rs  relation.rs  target.rs  value.rs
tardis/feryr_prog/src/corpus_handle/mutation/: call.rs  ptr.rs  res.rs
tardis/feryr_prog/src/corpus_handle/parse/: mod.rs
tardis/feryr_prog/src/corpus_handle/ty/: double.rs  res.rs
tardis/feryr_prog/src/cover_handle/: cover.rs
tardis/feryr_util/: Cargo.toml  build.rs  mod.rs
tardis/feryr_util/src/: sys.rs  vm.rs
(+538 files in other folders)
