[package]
name = "feryr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
util = {path = "../feryr_util", version =  "0.1.0"} 
feryr_prog = {path = "../feryr_prog", version =  "0.1.0"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1"
regex = "1"
chrono = "0.4.19" 
ctrlc = "3.2.1"
libc = "0.2.105"
thread-id = "4.0.0"
clap = "2"
feryr_external = {path = "../feryr_external"}