[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
thiserror = "1.0"
nix = "0.23.1"
feryr_external = { path = "../feryr_external", version = "0.1.0"}
feryr_prog = {path = "../feryr_prog", version =  "0.1.0"} 
failure = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7"
chrono = "0.4.19"
regex = "1.0"
ctrlc = "3.2.1"
libc = "0.2.105"
num_cpus = "1.0"
log = "0.4.14"
strum = "0.22.0"
strum_macros = "0.22.0"
thread-id = "4.0.0"
ahash = "0.7"
rand = { version = "0.8", features = ["small_rng"] }
portpicker = "0.1.1"
[dependencies.simd-json]
version = "0.4"
features = ["known-key", "swar-number-parsing", "allow-non-simd"]